Add classes for the currently selected value in the Year and Decade Views.

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -323,6 +323,7 @@ $cal-value-current: $cal-theme-color !default;
 $cal-value-weekend: $disabled-color !default;
 $cal-value-hover-bg: $off-white !default;
 $cal-value-year-fs: em(18px, 16px) !default;
+$cal-value-year-current-fs: em(24px, 16px) !default;
 $cal-value-year-hover-fs: em(27px, 16px) !default;
 $cal-value-year-hover-color: $cal-theme-color !default;
 $cal-value-month-hover-color: $cal-theme-color !default;
