--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -32,8 +32,10 @@
                 {{ dayName }}
             </span>
         </div>
-        <div *ngFor="let week of getMonth; trackBy:rowTracker" class="igx-calendar__body-row" (click)="onDateClick($event)" [@animateChange]="monthAction">
-            <span tabindex="0" *ngFor="let day of week; trackBy:dateTracker" [attr.data-prevmonth]="day.isPrevMonth ? true : null" [attr.data-nextmonth]="day.isNextMonth ? true : null"
+        <div *ngFor="let week of getCalendarMonth; trackBy:rowTracker" class="igx-calendar__body-row" (click)="onDateClick($event)" [@animateChange]="monthAction">
+            <span tabindex="0" *ngFor="let day of week; trackBy:dateTracker"
+                [attr.data-prevmonth]="day.isPrevMonth ? true : null" [attr.data-nextmonth]="day.isNextMonth ? true : null"
+                [attr.data-curmonth]="day.isCurrentMonth ? true : null"
                 [class.igx-calendar__date--inactive]="isInactive(day)" [class.igx-calendar__date]="day.isCurrentMonth && !isWeekend(day) && !isSelected(day)"
                 [class.igx-calendar__date--weekend]="isWeekend(day)" [class.igx-calendar__date--current]="isToday(day) && !isSelected(day)"
                 [class.igx-calendar__date--selected]="isSelected(day)">
