--- a/src/themes/material/modules/_nav-drawer.scss
+++ b/src/themes/material/modules/_nav-drawer.scss
@@ -41,6 +41,7 @@
         position: relative;
         max-width: 100%;
         box-shadow: none;
+        z-index: 0;
     }
 
     &.pinned {
@@ -93,7 +94,11 @@
     }
 
     &.panning {
-        transform: translate3d(0, 0, 0); // try layer creation manually in advance for opacity
+        transform: translate3d(
+            0,
+            0,
+            0
+        ); // try layer creation manually in advance for opacity
         transition: none;
 
         &.hidden {
