Add space between header date elements.

--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -4,7 +4,7 @@
         <h5 class="igx-calendar__header-year">{{ getHeaderYear() }}</h5>
         <h2 class="igx-calendar__header-date">
             <span>
-                {{ getFormattedDate().weekday }},
+                {{ getFormattedDate().weekday }},&nbsp;
             </span>
             <span>
                 {{ getFormattedDate().monthday }}
