Renamed range to slider

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -78,9 +78,9 @@
                         <span>Progress Indicators</span>
                     </span>
 
-                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/range">
+                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/slider">
                         <i class="material-icons">linear_scale</i>
-                        <span>Range</span>
+                        <span>Slider</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
