--- a/src/themes/material/extends/_index.scss
+++ b/src/themes/material/extends/_index.scss
@@ -17,7 +17,7 @@
 @import 'progress';
 @import 'card';
 @import 'toast';
-@import 'range';
+@import 'slider';
 @import 'button-group';
 @import 'grid';
 @import 'grid-filtering';
