--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -18,7 +18,7 @@
 @import 'progress';
 @import 'card';
 @import 'toast';
-@import 'range';
+@import 'slider';
 @import 'button-group';
 @import 'grid';
 @import 'grid-filtering';
