Added documentation comments for public methods and properties;
Added valueChanged event

--- a/demos/app/slider/sample.component.html
+++ b/demos/app/slider/sample.component.html
@@ -10,7 +10,7 @@
         <div>
             <article class="sample-column">
                 <h4 class="sample-title">Slider</h4>
-                <igx-slider #slider [(ngModel)]="task.percentCompleted" step="5" [lowerBound]="20">
+                <igx-slider #slider [(ngModel)]="task.percentCompleted" [step]="5" [lowerBound]="20">
                 </igx-slider>
             </article>
 
