rename onOpened event to onOpen and fix the test for this event

--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,5 +1,5 @@
 <div class="igx-date-picker">
-    <input class="igx-date-picker__input-date" igxInput (click)="onOpenedEvent($event)" [value]="_displayData"  />
+    <input class="igx-date-picker__input-date" igxInput (click)="onOpenEvent($event)" [value]="_displayData"  />
     <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true">
         <igx-calendar
             class="igx-date-picker__calendar"
