Fixed typos in API and comments

--- a/demos/app/buttonGroup/sample.component.html
+++ b/demos/app/buttonGroup/sample.component.html
@@ -35,7 +35,7 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Mutliple Selection <i class="light">Vertical</i></h4>
+            <h4 class="sample-title">Multiple Selection <i class="light">Vertical</i></h4>
             <igx-buttongroup [multiSelection]="true" [values]="borders" [alignment]="alignment">
             </igx-buttongroup>
         </article>
