Add module styles for most components to component's folder.

--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -1,26 +1,29 @@
 @import 'titillium';
 @import 'typography';
 @import 'material_icons';
+
 @import 'buttons';
 @import 'inputs';
-@import 'controls';
-@import 'list';
+// @import 'controls';
+
+// @import 'list';
+
 @import 'tab';
-@import 'avatar';
-@import 'badges';
+//@import 'avatar';
+//@import 'badges';
 @import 'ripple';
-@import 'nav-drawer';
-@import 'dialog';
-@import 'navbar';
-@import 'icon';
-@import 'carousel';
+// @import 'nav-drawer';
+// @import 'dialog';
+// @import 'navbar';
+// @import 'icon';
+// @import 'carousel';
 @import 'snackbar';
-@import 'progress';
-@import 'card';
+// @import 'progress';
+// @import 'card';
 @import 'toast';
 @import 'slider';
-@import 'button-group';
-@import 'grid';
-@import 'grid-filtering';
-@import 'calendar';
-@import 'date-picker';
+// @import 'button-group';
+// @import 'grid';
+// @import 'grid-filtering';
+// @import 'calendar';
+// @import 'date-picker';
