--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -4,106 +4,106 @@
     $block: bem--selector-to-string(&);
 
     // Radio control styles
-    @include e(radio) {
-        //hide default radio control
-        @include hide-default;
+    // @include e(radio) {
+    //     //hide default radio control
+    //     @include hide-default;
 
-        ~ #{$block}__label {
-            @extend %igx-radio-lbl-display;
-        }
+    //     ~ #{$block}__label {
+    //         @extend %igx-radio-lbl-display;
+    //     }
 
-        &:not(:checked) ~ #{$block}__label::before {
-            @extend %igx-radio-lbl-notchecked--before;
-        }
+    //     &:not(:checked) ~ #{$block}__label::before {
+    //         @extend %igx-radio-lbl-notchecked--before;
+    //     }
 
-        &:not(:checked) ~ #{$block}__label::after {
-            @extend %igx-radio-lbl-notchecked--after;
-        }
+    //     &:not(:checked) ~ #{$block}__label::after {
+    //         @extend %igx-radio-lbl-notchecked--after;
+    //     }
 
-        &:checked ~ #{$block}__label::before {
-            @extend %igx-radio-lbl-checked--before;
-        }
+    //     &:checked ~ #{$block}__label::before {
+    //         @extend %igx-radio-lbl-checked--before;
+    //     }
 
-        &:checked ~ #{$block}__label::after {
-            @extend %igx-radio-lbl-checked--after;
-        }
+    //     &:checked ~ #{$block}__label::after {
+    //         @extend %igx-radio-lbl-checked--after;
+    //     }
 
-        &:disabled ~ #{$block}__label {
-            @extend %igx-radio-lbl--disabled;
-        }
+    //     &:disabled ~ #{$block}__label {
+    //         @extend %igx-radio-lbl--disabled;
+    //     }
 
-        &:disabled:checked ~ #{$block}__label::before {
-            @extend %igx-radio-lbl-checked--disabled-before;
-        }
+    //     &:disabled:checked ~ #{$block}__label::before {
+    //         @extend %igx-radio-lbl-checked--disabled-before;
+    //     }
 
-        &:disabled:checked ~ #{$block}__label::after {
-            @extend %igx-radio-lbl-checked--disabled-after;
-        }
+    //     &:disabled:checked ~ #{$block}__label::after {
+    //         @extend %igx-radio-lbl-checked--disabled-after;
+    //     }
 
-        &:disabled:not(:checked) ~ #{$block}__label::after {
-            @extend %igx-radio-lbl-notchecked--disabled-after;
-        }
-    }
+    //     &:disabled:not(:checked) ~ #{$block}__label::after {
+    //         @extend %igx-radio-lbl-notchecked--disabled-after;
+    //     }
+    // }
 
     // Checkbox control styles
-    @include e(cbx) {
-        @include hide-default;
+    // @include e(cbx) {
+    //     @include hide-default;
 
-        ~ #{$block}__label {
-            @extend %igx-cbx-lbl-display;
+    //     ~ #{$block}__label {
+    //         @extend %igx-cbx-lbl-display;
 
-            @include b(tick) {
-                @extend %igx-cbx-lbl-tick;
-            }
-        }
+    //         @include b(tick) {
+    //             @extend %igx-cbx-lbl-tick;
+    //         }
+    //     }
 
-        &:checked ~ #{$block}__label {
-            .tick {
-                @extend %igx-cbx-lbl-checked-tick;
-            }
-        }
+    //     &:checked ~ #{$block}__label {
+    //         .tick {
+    //             @extend %igx-cbx-lbl-checked-tick;
+    //         }
+    //     }
 
-        &:not(:checked) ~ #{$block}__label::after {
-            @extend %igx-cbx-lbl-notchecked-after;
-        }
+    //     &:not(:checked) ~ #{$block}__label::after {
+    //         @extend %igx-cbx-lbl-notchecked-after;
+    //     }
 
-        &:checked ~ #{$block}__label::after {
-            @extend %igx-cbx-lbl-checked-after;
-        }
+    //     &:checked ~ #{$block}__label::after {
+    //         @extend %igx-cbx-lbl-checked-after;
+    //     }
 
-        &:disabled ~ #{$block}__label {
-            @extend %igx-cbx-lbl-disabled;
-        }
+    //     &:disabled ~ #{$block}__label {
+    //         @extend %igx-cbx-lbl-disabled;
+    //     }
 
-        &:disabled:checked ~ #{$block}__label::after {
-            @extend %igx-cbx-lbl-checked--disabled-after;
-        }
+    //     &:disabled:checked ~ #{$block}__label::after {
+    //         @extend %igx-cbx-lbl-checked--disabled-after;
+    //     }
 
-        &:disabled:not(:checked) ~ #{$block}__label::after {
-            @extend %igx-cbx-lbl-notchecked--disabled-after;
-        }
-    }
+    //     &:disabled:not(:checked) ~ #{$block}__label::after {
+    //         @extend %igx-cbx-lbl-notchecked--disabled-after;
+    //     }
+    // }
 
     // Switch control styles
-    @include e(switch) {
-        @include hide-default;
+    // @include e(switch) {
+    //     @include hide-default;
 
-        ~ #{$block}__label {
-            @extend %igx-switch-lbl-display;
-        }
+    //     ~ #{$block}__label {
+    //         @extend %igx-switch-lbl-display;
+    //     }
 
-        &:checked ~ #{$block}__label {
-            @extend %igx-switch-lbl--on;
-        }
+    //     &:checked ~ #{$block}__label {
+    //         @extend %igx-switch-lbl--on;
+    //     }
 
-        &:disabled ~ #{$block}__label {
-            @extend %igx-switch-lbl--disabled;
-        }
-    }
+    //     &:disabled ~ #{$block}__label {
+    //         @extend %igx-switch-lbl--disabled;
+    //     }
+    // }
 
-    @include e(switch-text) {
-        padding-right: em(16px);
-    }
+    // @include e(switch-text) {
+    //     padding-right: em(16px);
+    // }
 
     display: flex;
     align-items: center;
