Encapsulate the styles for the remaining components

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -333,7 +333,7 @@ $cal-value-month-height: 91px !default;
 $cal-row-padding: 0 em(16px, 16px) !default;
 
 // 9. Fonts //
-$titillium-font-path: 'fonts/titillium/' !default;
+$titillium-font-path: '../src/fonts/titillium/' !default;
 
 // 10. Forms //
 $control-padding: 8px 0 !default;
