--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -8,7 +8,7 @@
 
 // @import 'list';
 
-@import 'tab';
+// @import 'tab';
 //@import 'avatar';
 //@import 'badges';
 @import 'ripple';
@@ -17,11 +17,11 @@
 // @import 'navbar';
 // @import 'icon';
 // @import 'carousel';
-@import 'snackbar';
+// @import 'snackbar';
 // @import 'progress';
 // @import 'card';
-@import 'toast';
-@import 'slider';
+// @import 'toast';
+// @import 'slider';
 // @import 'button-group';
 // @import 'grid';
 // @import 'grid-filtering';
