--- a/src/tabbar/tab.component.html
+++ b/src/tabbar/tab.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="relatedPanel.icon" ngClass="tab-icon">
     <i class="material-icons">{{relatedPanel.icon}}</i>
-    <span [class.igx-badge--hidden]="_changesCount == 0" class="igx-badge">{{_changesCount}}</span>
+    <igx-badge [value]="_changesCount" [hidden]="_changesCount == 0"></igx-badge>
 </div>
 <div *ngIf="relatedPanel.label" ngClass="tab-label">{{relatedPanel.label}}</div>
